<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context="com.example.gauthupload.Profile">

    <ImageView
        android:id="@+id/gradimm3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#2a6ebc"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        />


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/logo2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo" />


    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="match_parent"
        android:layout_alignEnd="@id/linear"
        android:layout_alignRight="@id/linear"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/logo2"

        android:paddingTop="20dp"
        android:text="Summary Bot"
        android:textColor="@color/White"
        android:textSize="30sp"
        android:textStyle="bold" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:paddingLeft="15dp"
        android:scrollbarStyle="outsideOverlay"
        android:paddingRight="15dp"
        android:layout_below="@id/gradimm3"
        android:scrollbarThumbVertical="@drawable/scrollview_thumb"
        android:scrollbarTrackVertical="@drawable/vertical_scrollview_track">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <Button
                android:layout_marginTop="50dp"
                android:id="@+id/selectFile"
                android:layout_width="125dp"

                android:layout_height="wrap_content"
                android:background="@drawable/rounded9"
                android:clickable="true"
                android:text="Select  FILE"
                android:layout_gravity="center"
                android:textColor="@color/White"
               />

            <LinearLayout
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:orientation="horizontal">


            <TextView
                android:id="@+id/notification1"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:text="You have selected  : "
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/notification"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:textColor="@color/Black"
                android:hint="No file"
                android:layout_marginRight="40dp"
              />
            </LinearLayout>


            <Button
                android:id="@+id/upload"
                android:layout_width="125dp"
                android:layout_height="wrap_content"

                android:background="@drawable/rounded9"
                android:text=" Get   Summary "
                android:layout_gravity="center"

                android:textColor="@color/White" />


            <TextView
                android:layout_marginTop="100dp"
                android:id="@+id/fileresult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:textColor="@color/Black"
                android:hint="Your Summary will appear here"
                android:verticalScrollbarPosition="defaultPosition"
                android:scrollbars = "vertical"
                android:scrollbarTrackVertical="@color/Black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#2a6ebc"/>

                <RelativeLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pitch"


                    android:textSize="16sp" />

                <SeekBar
                    android:layout_marginTop="20dp"
                    android:id="@+id/seek_bar_pitcha"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:progress="50"
                    android:theme="@style/AppTheme.WhiteAccent"
                    android:soundEffectsEnabled="true"
                   />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Speed"
                    android:layout_marginTop="60dp"
                    android:textSize="16sp" />

                <SeekBar
                    android:layout_marginTop="40dp"
                    android:layout_below="@id/seek_bar_pitcha"
                    android:id="@+id/seek_bar_speeda"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:progress="50"
                    android:soundEffectsEnabled="true"
                    android:theme="@style/AppTheme.WhiteAccent"
                    />


                <ImageView
                    android:layout_toRightOf="@id/seek_bar_pitcha"
                    android:id="@+id/button_speaka"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:enabled="false"
                    android:src="@drawable/speakeron"
                    android:text="Say it!" />
                <ImageView
                    android:layout_toRightOf="@id/seek_bar_speeda"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/button_speaka"
                    android:id="@+id/button_stopa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/stop"
                    android:enabled="false"/>
                </RelativeLayout>

            <ImageView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:src="@drawable/downloadfile"
                android:id="@+id/downloadfile"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"

                />


                <ImageView
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sha"
                    android:id="@+id/sharesumpdf"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"

                    />







        </LinearLayout>
    </ScrollView>
</RelativeLayout>