...
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">
    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/file"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="UPLOAD"

        android:drawableLeft="@drawable/file"
        android:padding="10dp"
        android:gravity="center"

        android:background="@drawable/rounded"
...
