<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recovery">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo1"
        android:id="@+id/logo3"
        />



    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="match_parent"
        android:layout_alignEnd="@id/linear"
        android:layout_alignRight="@id/linear"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/logo3"

        android:paddingTop="20dp"
        android:text="Summary Bot"
        android:textColor="#0D5397"
        android:textSize="30sp"
        android:textStyle="bold" />
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <EditText
                android:id="@+id/email1"
                android:layout_width="match_parent"
                android:layout_height="40dp"


                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:textSize="14sp"


                android:layout_marginBottom="15dp"/>
    <Button
        android:id="@+id/reset1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="Reset Password"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textStyle="normal"
        android:textColor="@color/White"
        android:background="@drawable/rounded5"/>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>